fix: uxid logo was not fully visible because of the black text

--- a/globals.css
+++ b/globals.css
@@ -167,3 +167,27 @@ p > svg {
         height: 50px;
     }
 }
+
+/* add a background to transparent and black images */
+
+.svg-container {
+    position: relative;
+    display: inline-block;
+}
+
+.svg-container::before {
+    content: ' ';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    filter: blur(50px);
+    background: radial-gradient(circle, white -100%, transparent 55%);
+    z-index: -1;
+    pointer-events: none;
+}
+
+.svg-image {
+    position: relative;
+}
